--- a/requirementss.txt
+++ b/requirementss.txt
@@ -1,8 +1,1 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy>=1.25.0 # This line is updated!
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.0
-plotly==5.17.0
-tqdm==4.65.0
+pip install streamlit pandas numpy matplotlib seaborn scikit-learn plotly tqdm
