--- a/requirementss.txt
+++ b/requirementss.txt
@@ -1,8 +1,4 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.0
-plotly==5.17.0
-tqdm==4.65.0
+streamlit
+pandas
+numpy>=1.25.0
+scikit-learn
